cli/ballerina-launcher/src/main/java/org/ballerinalang/launcher/toml/antlr4/TomlParser.java
// Generated from Toml.g4 by ANTLR 4.5.3
package org.ballerinalang.launcher.toml.antlr4;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TomlParser extends Parser {
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, ALPHA = 23, SPACE = 24,
            HYPHEN = 25, PERIOD = 26, QUOTATION_MARK = 27, UNDERSCORE = 28, COLON = 29, COMMA = 30,
            SLASH = 31, APOSTROPHE = 32, EQUALS = 33, HASH = 34, COMMENT = 35, BASICUNESCPAED = 36,
            MLBASICUNESCAPED = 37, LITERALCHAR = 38, MLLITERALCHAR = 39, PLUS = 40, DIGIT19 = 41,
            DIGIT07 = 42, DIGIT01 = 43, E = 44, INF = 45, NAN = 46, TRUE = 47, FALSE = 48, UPPERCASE_T = 49,
            LOWERCASE_T = 50, UPPERCASE_Z = 51, DIGIT = 52, HEXDIG = 53;
    public static final int
            RULE_toml = 0, RULE_alpha = 1, RULE_expression = 2, RULE_ws = 3, RULE_wschar = 4,
            RULE_newline = 5, RULE_keyval = 6, RULE_key = 7, RULE_unquotedKey = 8,
            RULE_quotedKey = 9, RULE_keyvalSep = 10, RULE_val = 11, RULE_string = 12,
            RULE_basicString = 13, RULE_basicChar = 14, RULE_escaped = 15, RULE_escapeSeqChar = 16,
            RULE_mlBasicString = 17, RULE_mlBasicStringDelim = 18, RULE_mlBasicBody = 19,
            RULE_mlBasicChar = 20, RULE_literalString = 21, RULE_mlLiteralString = 22,
            RULE_mlLiteralStringDelim = 23, RULE_mlLiteralBody = 24, RULE_integer = 25,
            RULE_minus = 26, RULE_hexPrefix = 27, RULE_octPrefix = 28, RULE_binPrefix = 29,
            RULE_decInt = 30, RULE_unsignedDecInt = 31, RULE_hexInt = 32, RULE_octInt = 33,
            RULE_binInt = 34, RULE_floatingPoint = 35, RULE_floatIntPart = 36, RULE_frac = 37,
            RULE_decimalPoint = 38, RULE_zeroPrefixableInt = 39, RULE_exp = 40, RULE_specialFloat = 41,
            RULE_bool = 42, RULE_dateTime = 43, RULE_dateFullyear = 44, RULE_dateMonth = 45,
            RULE_dateMday = 46, RULE_timeDelim = 47, RULE_timeHour = 48, RULE_timeMinute = 49,
            RULE_timeSecond = 50, RULE_timeSecfrac = 51, RULE_timeNumoffset = 52,
            RULE_timeOffset = 53, RULE_partialTime = 54, RULE_fullDate = 55, RULE_fullTime = 56,
            RULE_offsetDateTime = 57, RULE_localDateTime = 58, RULE_localDate = 59,
            RULE_localTime = 60, RULE_array = 61, RULE_arrayOpen = 62, RULE_arrayClose = 63,
            RULE_arrayValues = 64, RULE_arrayvalsNonEmpty = 65, RULE_arraySep = 66,
            RULE_table = 67, RULE_stdTable = 68, RULE_stdTableOpen = 69, RULE_stdTableClose = 70,
            RULE_tableKeySep = 71, RULE_inlineTable = 72, RULE_inlineTableOpen = 73,
            RULE_inlineTableClose = 74, RULE_inlineTableSep = 75, RULE_inlineTableKeyvals = 76,
            RULE_inlineTableKeyvalsNonEmpty = 77, RULE_arrayTable = 78, RULE_arrayTableOpen = 79,
            RULE_arrayTableClose = 80;
    public static final String[] ruleNames = {
            "toml", "alpha", "expression", "ws", "wschar", "newline", "keyval", "key",
            "unquotedKey", "quotedKey", "keyvalSep", "val", "string", "basicString",
            "basicChar", "escaped", "escapeSeqChar", "mlBasicString", "mlBasicStringDelim",
            "mlBasicBody", "mlBasicChar", "literalString", "mlLiteralString", "mlLiteralStringDelim",
            "mlLiteralBody", "integer", "minus", "hexPrefix", "octPrefix", "binPrefix",
            "decInt", "unsignedDecInt", "hexInt", "octInt", "binInt", "floatingPoint",
            "floatIntPart", "frac", "decimalPoint", "zeroPrefixableInt", "exp", "specialFloat",
            "bool", "dateTime", "dateFullyear", "dateMonth", "dateMday", "timeDelim",
            "timeHour", "timeMinute", "timeSecond", "timeSecfrac", "timeNumoffset",
            "timeOffset", "partialTime", "fullDate", "fullTime", "offsetDateTime",
            "localDateTime", "localDate", "localTime", "array", "arrayOpen", "arrayClose",
            "arrayValues", "arrayvalsNonEmpty", "arraySep", "table", "stdTable", "stdTableOpen",
            "stdTableClose", "tableKeySep", "inlineTable", "inlineTableOpen", "inlineTableClose",
            "inlineTableSep", "inlineTableKeyvals", "inlineTableKeyvalsNonEmpty",
            "arrayTable", "arrayTableOpen", "arrayTableClose"
    };
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = {
            null, "'\t'", "'\r'", "'\n'", "'\r\n'", "'\\\"'", "'\\\\'", "'\\/'", "'\\b'",
            "'\\f'", "'\\n'", "'\\r'", "'\\t'", "'\\'", "'0x'", "'0o'", "'0b'", "'['",
            "']'", "'{'", "'}'", "'[['", "']]'", null, "' '", "'-'", "'.'", "'\"'",
            "'_'", "':'", "','", "'/'", "'''", "'='", "'#'", null, null, null, null,
            null, "'+'", null, null, null, "'e'", "'inf'", "'nan'", "'true'", "'false'",
            "'T'", "'t'", "'Z'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, "ALPHA",
            "SPACE", "HYPHEN", "PERIOD", "QUOTATION_MARK", "UNDERSCORE", "COLON",
            "COMMA", "SLASH", "APOSTROPHE", "EQUALS", "HASH", "COMMENT", "BASICUNESCPAED",
            "MLBASICUNESCAPED", "LITERALCHAR", "MLLITERALCHAR", "PLUS", "DIGIT19",
            "DIGIT07", "DIGIT01", "E", "INF", "NAN", "TRUE", "FALSE", "UPPERCASE_T",
            "LOWERCASE_T", "UPPERCASE_Z", "DIGIT", "HEXDIG"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public TomlParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Toml.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final TomlContext toml() throws RecognitionException {
        TomlContext _localctx = new TomlContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_toml);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(162);
                expression();
                setState(168);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__2 || _la == T__3) {
                    {
                        {
                            setState(163);
                            newline();
                            setState(164);
                            expression();
                        }
                    }
                    setState(170);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AlphaContext alpha() throws RecognitionException {
        AlphaContext _localctx = new AlphaContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_alpha);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(171);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ALPHA) | (1L << E) | (1L << INF) | (1L << NAN) | (1L << TRUE) | (1L << FALSE) | (1L << UPPERCASE_T) | (1L << LOWERCASE_T) | (1L << UPPERCASE_Z))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExpressionContext expression() throws RecognitionException {
        ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_expression);
        try {
            setState(182);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(173);
                    ws();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(174);
                    ws();
                    setState(175);
                    keyval();
                    setState(176);
                    ws();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(178);
                    ws();
                    setState(179);
                    table();
                    setState(180);
                    ws();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final WsContext ws() throws RecognitionException {
        WsContext _localctx = new WsContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_ws);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(187);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(184);
                                wschar();
                            }
                        }
                    }
                    setState(189);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final WscharContext wschar() throws RecognitionException {
        WscharContext _localctx = new WscharContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_wschar);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(190);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << SPACE))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final NewlineContext newline() throws RecognitionException {
        NewlineContext _localctx = new NewlineContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_newline);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(192);
                _la = _input.LA(1);
                if (!(_la == T__2 || _la == T__3)) {
                    _errHandler.recoverInline(this);
                } else {
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final KeyvalContext keyval() throws RecognitionException {
        KeyvalContext _localctx = new KeyvalContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_keyval);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(194);
                key();
                setState(195);
                keyvalSep();
                setState(196);
                val();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final KeyContext key() throws RecognitionException {
        KeyContext _localctx = new KeyContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_key);
        try {
            setState(200);
            switch (_input.LA(1)) {
                case T__0:
                case T__1:
                case T__2:
                case T__17:
                case T__21:
                case ALPHA:
                case SPACE:
                case HYPHEN:
                case PERIOD:
                case UNDERSCORE:
                case EQUALS:
                case E:
                case INF:
                case NAN:
                case TRUE:
                case FALSE:
                case UPPERCASE_T:
                case LOWERCASE_T:
                case UPPERCASE_Z:
                case DIGIT:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(198);
                    unquotedKey();
                }
                break;
                case QUOTATION_MARK:
                case APOSTROPHE:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(199);
                    quotedKey();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final UnquotedKeyContext unquotedKey() throws RecognitionException {
        UnquotedKeyContext _localctx = new UnquotedKeyContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_unquotedKey);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(208);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ALPHA) | (1L << HYPHEN) | (1L << UNDERSCORE) | (1L << E) | (1L << INF) | (1L << NAN) | (1L << TRUE) | (1L << FALSE) | (1L << UPPERCASE_T) | (1L << LOWERCASE_T) | (1L << UPPERCASE_Z) | (1L << DIGIT))) != 0)) {
                    {
                        setState(206);
                        switch (_input.LA(1)) {
                            case ALPHA:
                            case E:
                            case INF:
                            case NAN:
                            case TRUE:
                            case FALSE:
                            case UPPERCASE_T:
                            case LOWERCASE_T:
                            case UPPERCASE_Z: {
                                setState(202);
                                alpha();
                            }
                            break;
                            case DIGIT: {
                                setState(203);
                                match(DIGIT);
                            }
                            break;
                            case HYPHEN: {
                                setState(204);
                                match(HYPHEN);
                            }
                            break;
                            case UNDERSCORE: {
                                setState(205);
                                match(UNDERSCORE);
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(210);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final QuotedKeyContext quotedKey() throws RecognitionException {
        QuotedKeyContext _localctx = new QuotedKeyContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_quotedKey);
        try {
            setState(213);
            switch (_input.LA(1)) {
                case QUOTATION_MARK:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(211);
                    basicString();
                }
                break;
                case APOSTROPHE:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(212);
                    literalString();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final KeyvalSepContext keyvalSep() throws RecognitionException {
        KeyvalSepContext _localctx = new KeyvalSepContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_keyvalSep);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(215);
                ws();
                setState(216);
                match(EQUALS);
                setState(217);
                ws();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ValContext val() throws RecognitionException {
        ValContext _localctx = new ValContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_val);
        try {
            setState(226);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(219);
                    string();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(220);
                    bool();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(221);
                    array();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(222);
                    inlineTable();
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(223);
                    dateTime();
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(224);
                    floatingPoint();
                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(225);
                    integer();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StringContext string() throws RecognitionException {
        StringContext _localctx = new StringContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_string);
        try {
            setState(232);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(228);
                    mlBasicString();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(229);
                    basicString();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(230);
                    mlLiteralString();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(231);
                    literalString();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BasicStringContext basicString() throws RecognitionException {
        BasicStringContext _localctx = new BasicStringContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_basicString);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(234);
                match(QUOTATION_MARK);
                setState(238);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << ALPHA) | (1L << SPACE) | (1L << HYPHEN) | (1L << PERIOD) | (1L << UNDERSCORE) | (1L << COLON) | (1L << COMMA) | (1L << SLASH) | (1L << APOSTROPHE) | (1L << EQUALS) | (1L << HASH) | (1L << BASICUNESCPAED) | (1L << PLUS) | (1L << E) | (1L << INF) | (1L << NAN) | (1L << TRUE) | (1L << FALSE) | (1L << UPPERCASE_T) | (1L << LOWERCASE_T) | (1L << UPPERCASE_Z))) != 0)) {
                    {
                        {
                            setState(235);
                            basicChar();
                        }
                    }
                    setState(240);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(241);
                match(QUOTATION_MARK);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BasicCharContext basicChar() throws RecognitionException {
        BasicCharContext _localctx = new BasicCharContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_basicChar);
        try {
            setState(257);
            switch (_input.LA(1)) {
                case T__4:
                case T__5:
                case T__6:
                case T__7:
                case T__8:
                case T__9:
                case T__10:
                case T__11:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(243);
                    escaped();
                }
                break;
                case ALPHA:
                case E:
                case INF:
                case NAN:
                case TRUE:
                case FALSE:
                case UPPERCASE_T:
                case LOWERCASE_T:
                case UPPERCASE_Z:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(244);
                    alpha();
                }
                break;
                case BASICUNESCPAED:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(245);
                    match(BASICUNESCPAED);
                }
                break;
                case SPACE:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(246);
                    match(SPACE);
                }
                break;
                case PLUS:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(247);
                    match(PLUS);
                }
                break;
                case HYPHEN:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(248);
                    match(HYPHEN);
                }
                break;
                case PERIOD:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(249);
                    match(PERIOD);
                }
                break;
                case UNDERSCORE:
                    enterOuterAlt(_localctx, 8);
                {
                    setState(250);
                    match(UNDERSCORE);
                }
                break;
                case COLON:
                    enterOuterAlt(_localctx, 9);
                {
                    setState(251);
                    match(COLON);
                }
                break;
                case COMMA:
                    enterOuterAlt(_localctx, 10);
                {
                    setState(252);
                    match(COMMA);
                }
                break;
                case SLASH:
                    enterOuterAlt(_localctx, 11);
                {
                    setState(253);
                    match(SLASH);
                }
                break;
                case APOSTROPHE:
                    enterOuterAlt(_localctx, 12);
                {
                    setState(254);
                    match(APOSTROPHE);
                }
                break;
                case EQUALS:
                    enterOuterAlt(_localctx, 13);
                {
                    setState(255);
                    match(EQUALS);
                }
                break;
                case HASH:
                    enterOuterAlt(_localctx, 14);
                {
                    setState(256);
                    match(HASH);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final EscapedContext escaped() throws RecognitionException {
        EscapedContext _localctx = new EscapedContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_escaped);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(259);
                escapeSeqChar();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final EscapeSeqCharContext escapeSeqChar() throws RecognitionException {
        EscapeSeqCharContext _localctx = new EscapeSeqCharContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_escapeSeqChar);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(261);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final MlBasicStringContext mlBasicString() throws RecognitionException {
        MlBasicStringContext _localctx = new MlBasicStringContext(_ctx, getState());
        enterRule(_localctx, 34, RULE_mlBasicString);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(263);
                mlBasicStringDelim();
                setState(264);
                mlBasicBody();
                setState(265);
                mlBasicStringDelim();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
